// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Short fine item Correct render in car card 1`] = `
<div
  class="undefined undefined"
>
  <div>
    <span />
    <span>
      Дата
    </span>
    <span>
      Сумма
    </span>
    <span>
      Пользователь
    </span>
    <span>
      Постановление №
    </span>
  </div>
  <div
    style="overflow:auto;will-change:transform;-webkit-overflow-scrolling:touch;height:418px;width:100%"
  >
    <div
      style="position:relative;width:100%;min-height:100%;height:40px"
    >
      <div
        style="position:absolute;top:0;left:0;width:100%;height:40px"
      >
        <span>
          1.
        </span>
        <span>
          <span
            class="formatted-date "
          >
            15 ДЕК 2019, 15:00
          </span>
        </span>
        <span>
          150.00 ₽
        </span>
        <span>
          <a
            class="link   "
            href="#/clients/undefined/info"
            rel="noopener"
          >
              
          </a>
        </span>
        <span>
          <a
            class="link   "
            href="https://www.mos.ru/shtrafy/result?dap=18810177190000005876"
            rel="noopener"
            target="__blank"
          >
            18810177190000005876
          </a>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Short fine item Correct render in clients card 1`] = `
<div
  class="undefined undefined"
>
  <div>
    <span />
    <span>
      Дата
    </span>
    <span>
      Сумма
    </span>
    <span>
      Автомобиль
    </span>
    <span />
    <span>
      Постановление №
    </span>
  </div>
  <div
    style="overflow:auto;will-change:transform;-webkit-overflow-scrolling:touch;height:493px;width:100%"
  >
    <div
      style="position:relative;width:100%;min-height:100%;height:40px"
    >
      <div
        style="position:absolute;top:0;left:0;width:100%;height:40px"
      >
        <span>
          1.
        </span>
        <span>
          <span
            class="formatted-date "
          >
            15 ДЕК 2019, 15:00
          </span>
        </span>
        <span>
          150.00 ₽
        </span>
        <span>
          <a
            class="link   "
            href="#/cars/9688e569-0b88-4bbf-9377-554074d6cfe8/info?back="
            rel="noopener"
          >
            Renault Kaptur
          </a>
        </span>
        <span>
          <div>
            <span>
              <div
                class="car_number_ "
              >
                <div
                  class="car_number_current"
                >
                  <span
                    class="text-for-copy copy_value"
                    data-event="no-event"
                    data-for="fines_tooltip"
                    data-place="top"
                    data-tip="<span>Скопировано<span>"
                    data-type="dark"
                    style="cursor:copy"
                    title="Скопировать в буфер"
                  >
                    б 936 вг
                  </span>
                </div>
                <div
                  class="car_number_region"
                >
                  779
                </div>
              </div>
            </span>
          </div>
        </span>
        <span>
          <a
            class="link   "
            href="https://www.mos.ru/shtrafy/result?dap=18810177190000005876"
            rel="noopener"
            target="__blank"
          >
            18810177190000005876
          </a>
        </span>
      </div>
    </div>
  </div>
</div>
`;
